--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
             };
 
             try {
-                const response = await fetch('/api/subscribe', {
+                const response = await fetch('http://localhost:3000/api/subscribe', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
